SERVER-66984 config.transactions collection may end up not having the "parentLsid" partial index if the primary steps down or shuts down while setting up the collection

(cherry picked from commit f9a3cf210791c19cc2d8569d0a7837745838d0cb)