jstests/multiVersion/internal_transactions_index_setFCV.js
@@ -7,6 +7,11 @@
 (function() {
 "use strict";
 
+// This test does direct writes to config.transactions which requires not using a session.
+TestData.disableImplicitSessions = true;
+
+load("jstests/replsets/rslib.js");
+
 // Verifies both the _id index and partial parent_lsid index exists for config.transactions.
 function assertPartialIndexExists(node) {
     const configDB = node.getDB("config");
@@ -36,7 +41,7 @@ function assertPartialIndexDoesNotExist(node) {
  * Verifies the partial index is dropped/created on FCV transitions and retryable writes work in all
  * FCVs.
  */
-function runTest(setFCVConn, modifyIndexConns, verifyIndexConns) {
+function runTest(setFCVConn, modifyIndexConns, verifyIndexConns, rst) {
     // Start at latest FCV which should have the index.
     assert.commandWorked(setFCVConn.adminCommand({setFeatureCompatibilityVersion: latestFCV}));
     verifyIndexConns.forEach(conn => {
@@ -48,6 +53,25 @@ function runTest(setFCVConn, modifyIndexConns, verifyIndexConns) {
     verifyIndexConns.forEach(conn => {
         assertPartialIndexDoesNotExist(conn);
     });
+
+    if (rst) {
+        // On step up to primary the index should not be created.
+
+        let primary = rst.getPrimary();
+        // Clear the collection so we'd try to create the index.
+        assert.commandWorked(primary.getDB("config").transactions.remove({}));
+        assert.commandWorked(
+            primary.adminCommand({replSetStepDown: ReplSetTest.kForeverSecs, force: true}));
+        assert.commandWorked(primary.adminCommand({replSetFreeze: 0}));
+
+        setFCVConn = rst.getPrimary();
+        modifyIndexConns = [rst.getPrimary()];
+        rst.awaitReplication();
+        verifyIndexConns.forEach(conn => {
+            reconnect(conn);
+            assertPartialIndexDoesNotExist(conn);
+        });
+    }
 
     assert.commandWorked(setFCVConn.getDB("foo").runCommand(
         {insert: "bar", documents: [{x: 1}], lsid: {id: UUID()}, txnNumber: NumberLong(11)}));
@@ -68,6 +92,25 @@ function runTest(setFCVConn, modifyIndexConns, verifyIndexConns) {
         assertPartialIndexDoesNotExist(conn);
     });
 
+    if (rst) {
+        // On step up to primary the index should not be created.
+
+        let primary = rst.getPrimary();
+        // Clear the collection so we'd try to create the index.
+        assert.commandWorked(primary.getDB("config").transactions.remove({}));
+        assert.commandWorked(
+            primary.adminCommand({replSetStepDown: ReplSetTest.kForeverSecs, force: true}));
+        assert.commandWorked(primary.adminCommand({replSetFreeze: 0}));
+
+        setFCVConn = rst.getPrimary();
+        modifyIndexConns = [rst.getPrimary()];
+        rst.awaitReplication();
+        verifyIndexConns.forEach(conn => {
+            reconnect(conn);
+            assertPartialIndexDoesNotExist(conn);
+        });
+    }
+
     assert.commandWorked(setFCVConn.getDB("foo").runCommand(
         {insert: "bar", documents: [{x: 1}], lsid: {id: UUID()}, txnNumber: NumberLong(11)}));
 
@@ -76,6 +119,25 @@ function runTest(setFCVConn, modifyIndexConns, verifyIndexConns) {
     verifyIndexConns.forEach(conn => {
         assertPartialIndexExists(conn);
     });
+
+    if (rst) {
+        // On step up to primary the index should be created.
+
+        let primary = rst.getPrimary();
+        // Clear the collection so we'll try to create the index.
+        assert.commandWorked(primary.getDB("config").transactions.remove({}));
+        assert.commandWorked(
+            primary.adminCommand({replSetStepDown: ReplSetTest.kForeverSecs, force: true}));
+        assert.commandWorked(primary.adminCommand({replSetFreeze: 0}));
+
+        setFCVConn = rst.getPrimary();
+        modifyIndexConns = [rst.getPrimary()];
+        rst.awaitReplication();
+        verifyIndexConns.forEach(conn => {
+            reconnect(conn);
+            assertPartialIndexExists(conn);
+        });
+    }
 
     assert.commandWorked(setFCVConn.getDB("foo").runCommand(
         {insert: "bar", documents: [{x: 1}], lsid: {id: UUID()}, txnNumber: NumberLong(11)}));
@@ -126,7 +188,7 @@ function runTest(setFCVConn, modifyIndexConns, verifyIndexConns) {
     rst.initiate();
     // Note setFCV always waits for majority write concern so in a two node cluster secondaries will
     // always have replicated the setFCV writes.
-    runTest(rst.getPrimary(), [rst.getPrimary()], [rst.getPrimary(), rst.getSecondary()]);
+    runTest(rst.getPrimary(), [rst.getPrimary()], [rst.getPrimary(), rst.getSecondary()], rst);
     rst.stopSet();
 }
 
